# ETL

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
01_etl/: extract.py  load.py  main.py  state.py  state_storage.py  transform.py
src/: config.py  main.py  raw_sql.py  utils.py
src/etl/: extract.py  load.py  scheme.py  transform.py
src/index_scheme/: films_schema.json  genres_schema.json  persons_schema.json
src/states/: state.py  state_storage.py
